<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="SmallSp">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- 编辑面板 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_controller_edit_bg">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_exit_edit"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:background="@drawable/shape_add_key_bg"
                android:src="@drawable/icon_exit_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sayx.hm_cloud.widget.DrawableTextView
                android:id="@+id/btn_add_key"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/shape_add_key_bg"
                android:gravity="center"
                android:text="@string/add_key"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                app:drawableLeft="@drawable/img_add_key"
                app:drawableSize="14dp"
                app:layout_constraintBottom_toBottomOf="@id/btn_exit_edit"
                app:layout_constraintStart_toEndOf="@id/btn_exit_edit"
                app:layout_constraintTop_toTopOf="@id/btn_exit_edit" />

            <com.sayx.hm_cloud.widget.DrawableTextView
                android:id="@+id/btn_add_combine_key"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/shape_add_key_bg"
                android:gravity="center"
                android:text="@string/combine_key"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:visibility="visible"
                app:drawableLeft="@drawable/img_add_key"
                app:drawableSize="14dp"
                app:layout_constraintBottom_toBottomOf="@id/btn_exit_edit"
                app:layout_constraintStart_toEndOf="@id/btn_add_key"
                app:layout_constraintTop_toTopOf="@id/btn_exit_edit" />

            <com.sayx.hm_cloud.widget.DrawableTextView
                android:id="@+id/btn_add_roulette_key"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/shape_add_key_bg"
                android:gravity="center"
                android:text="@string/roulette_key"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:visibility="visible"
                app:drawableLeft="@drawable/img_add_key"
                app:drawableSize="14dp"
                app:layout_constraintStart_toEndOf="@id/btn_add_combine_key"
                app:layout_constraintBottom_toBottomOf="@id/btn_exit_edit"
                app:layout_constraintTop_toTopOf="@id/btn_exit_edit" />

            <com.sayx.hm_cloud.widget.DrawableTextView
                android:id="@+id/btn_add_container_key"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/shape_add_key_bg"
                android:gravity="center"
                android:text="@string/container_key"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:visibility="visible"
                app:drawableLeft="@drawable/img_add_key"
                app:drawableSize="14dp"
                app:layout_constraintStart_toEndOf="@id/btn_add_roulette_key"
                app:layout_constraintBottom_toBottomOf="@id/btn_exit_edit"
                app:layout_constraintTop_toTopOf="@id/btn_exit_edit" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_edit_more"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="7dp"
                android:padding="5dp"
                android:background="@drawable/shape_add_key_bg"
                android:src="@drawable/icon_edit_more"
                app:layout_constraintStart_toEndOf="@id/btn_add_container_key"
                app:layout_constraintBottom_toBottomOf="@id/btn_exit_edit"
                app:layout_constraintTop_toTopOf="@id/btn_exit_edit"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_edit"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/shape_add_key_bg"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/edit"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/btn_exit_edit"
                app:layout_constraintStart_toEndOf="@id/btn_edit_more"
                app:layout_constraintTop_toTopOf="@id/btn_exit_edit" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_save_edit"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/shape_save_edit_bg"
                android:gravity="center"
                android:minWidth="70dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/save"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/btn_exit_edit"
                app:layout_constraintStart_toEndOf="@id/btn_edit"
                app:layout_constraintTop_toTopOf="@id/btn_exit_edit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_edit_fold"
            android:layout_width="50dp"
            android:layout_height="19dp"
            android:src="@drawable/selector_edit_menu_fold" />
    </LinearLayout>
</layout>