<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="370dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/img_common_dialog_bg">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_close"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="10dp"
                android:src="@drawable/icon_exit_edit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/config_name"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:textColorHint="#FFA3ACBD"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:lines="1"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:hint="@string/input_config_name"
                android:background="@drawable/shape_edit_config_name"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_save"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/selector_dialog_btn_bg"
                android:gravity="center"
                android:textSize="13sp"
                android:text="@string/save"
                android:textColor="@color/selector_btn_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>